@@ -1,3 +1,7 @@
+2000-03-01  Nick Clifton  <nickc@cygnus.com>
+
+	* gasp.c (do_align): Remove bogus check of alignment value.
+
 2000-02-27  Thomas de Lellis  <tdel@windriver.com>
 
 	* config/obj-elf.c (elf_frob_symbol): Remove code which when
